--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run multilingual-payment-form:storybook",
+    "build-storybook": "ng run multilingual-payment-form:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +30,10 @@
     "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
+    "@compodoc/compodoc": "^1.1.26",
+    "@storybook/addon-docs": "^9.0.4",
+    "@storybook/addon-onboarding": "^9.0.4",
+    "@storybook/angular": "^9.0.4",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
@@ -38,6 +44,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.4",
+    "storybook": "^9.0.4",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.7.2"
   }
