--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
+.vscode
+.angular
+.storybook
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
